@@ -23,6 +23,7 @@ v 8.4.0 (unreleased)
   - Validate README format before displaying
   - Enable Microsoft Azure OAuth2 support (Janis Meybohm)
   - Add file finder feature in tree view (koreamic)
+  - Ajax filter by message for commits page
 
 v 8.3.3 (unreleased)
   - Get "Merge when build succeeds" to work when commits were pushed to MR target branch while builds were running
